# src/models/paging-model.ts
@@ -1,0 +1,8 @@
+export type FeedbackQueryModel = {
+    page: number;
+    limit: number;
+    sortField: string;
+    ascending: boolean;
+    filterField: string;
+    filterValue: number;
+}
